gitops/jupyterhub/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jupyterhub
  namespace: jupyterhub
spec:
  parentRefs:
    - { name: tre, namespace: kube-system }
  rules:
    - matches:
        - path: { type: PathPrefix, value: /jupyter }
      backendRefs:
        - { name: proxy-public, port: 80 }
